// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CanvasNodeDefault > configurable > should render configurable node correctly 1`] = `
<div
  class="node configurable"
  data-test-id="canvas-configurable-node"
  style="--canvas-node--width: 224px; --canvas-node--height: 96px; --node-icon-size: 40px;"
>
  <!--v-if-->
  <node-icon-stub
    class="icon"
    disabled="false"
    shrink="false"
    size="40"
  />
  <div
    class="settingsIcons"
  >
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <div
    class="description"
  >
    <div
      class="label"
    >
      Test Node
    </div>
    <!--v-if-->
    <div
      class="subtitle"
    >
      Test Node Subtitle
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`CanvasNodeDefault > configuration > should render configurable configuration node correctly 1`] = `
<div
  class="node configurable configuration"
  data-test-id="canvas-configurable-node"
  style="--canvas-node--width: 240px; --canvas-node--height: 80px; --node-icon-size: 30px;"
>
  <!--v-if-->
  <node-icon-stub
    class="icon"
    disabled="false"
    shrink="false"
    size="30"
  />
  <!--v-if-->
  <!--v-if-->
  <div
    class="description"
  >
    <div
      class="label"
    >
      Test Node
    </div>
    <!--v-if-->
    <div
      class="subtitle"
    >
      Test Node Subtitle
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`CanvasNodeDefault > configuration > should render configuration node correctly 1`] = `
<div
  class="node configuration"
  data-test-id="canvas-configuration-node"
  style="--canvas-node--width: 80px; --canvas-node--height: 80px; --node-icon-size: 30px;"
>
  <!--v-if-->
  <node-icon-stub
    class="icon"
    disabled="false"
    shrink="false"
    size="30"
  />
  <!--v-if-->
  <!--v-if-->
  <div
    class="description"
  >
    <div
      class="label"
    >
      Test Node
    </div>
    <!--v-if-->
    <div
      class="subtitle"
    >
      Test Node Subtitle
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`CanvasNodeDefault > should render node correctly 1`] = `
<div
  class="node"
  data-test-id="canvas-default-node"
  style="--canvas-node--width: 96px; --canvas-node--height: 96px; --node-icon-size: 40px;"
>
  <!--v-if-->
  <node-icon-stub
    class="icon"
    disabled="false"
    shrink="false"
    size="40"
  />
  <div
    class="settingsIcons"
  >
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <div
    class="description"
  >
    <div
      class="label"
    >
      Test Node
    </div>
    <!--v-if-->
    <div
      class="subtitle"
    >
      Test Node Subtitle
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`CanvasNodeDefault > trigger > should render trigger node correctly 1`] = `
<div
  class="node trigger"
  data-test-id="canvas-trigger-node"
  style="--canvas-node--width: 96px; --canvas-node--height: 96px; --node-icon-size: 40px;"
>
  <!--v-if-->
  <node-icon-stub
    class="icon"
    disabled="false"
    shrink="false"
    size="40"
  />
  <div
    class="settingsIcons"
  >
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
  <div
    class="description"
  >
    <div
      class="label"
    >
      Test Node
    </div>
    <!--v-if-->
    <div
      class="subtitle"
    >
      Test Node Subtitle
    </div>
  </div>
  <!--v-if-->
</div>
`;
